--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Inyro</h1>
+      <h1 onclick="location.href='Main.html'">Inyro</h1>
       <nav>
         <span onclick="location.href='yunjin2.html'">로그인</span>
         <span onclick="location.href='yunjin5.html'">회원가입</span>
@@ -21,9 +21,10 @@
       <legend>글 작성하기</legend>
       이름 : <input type="text" placeholder="이름을 입력하세요."> <br>
       종류 : <select name="option">
-        <option value="1" selected>공지</option>
-        <option value="2">게시판</option>
-        <option value="3">갤러리</option>
+        <option value="1" selected>자유</option>
+        <option value="2">과제</option>
+        <option value="3">QNA</option>
+        <option value="4">갤러리</option>
       </select> <br>
       <textarea cols="70" rows="40" placeholder="내용을 입력하세요."></textarea> <br>
       <button onclick="location.href='yejin12.html'">등록하기</button>
