--- a/inyro/yejin16.html
+++ b/inyro/yejin16.html
@@ -5,9 +5,7 @@
   </head>
   <body>
     <button onclick="location.href='yejin13.html'">작성하기</button>
-      <ol>
-      <li>NAME</li>
-    </ol>
+      <iframe src="yejinframe3.html" frameborder="0"></iframe>
     <form>
       <select name="select">
         <option value="1" selected>제목</option>
