--- a/inyro/yejin17.html
+++ b/inyro/yejin17.html
@@ -5,15 +5,6 @@
   </head>
   <body>
     <button onclick="location.href='yejin13.html'">작성하기</button>
-    <table>
-      <tbody>
-        <tr>
-          <td><img src="gallery1.PNG"></td><td><img src="gallery2.PNG"></td><td><img src="gallery3.PNG"></td>
-        </tr>
-        <tr>
-            <td><img src="gallery5.PNG"></td><td><img src="gallery4.PNG"></td><td><img src="gallery6.PNG"></td>
-        </tr>
-      </tbody>
-    </table>
+    <iframe src="yejinframe4.html" frameborder="0"></iframe>
   </body>
 </html>
