--- a/inyro/yejin17.html
+++ b/inyro/yejin17.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <button onclick="location.href='yejin13.html'">작성하기</button>
-    <iframe src="yejinframe4.html" frameborder="0"></iframe>
+    <iframe src="yejinframe4.html" width=100% height=100% frameborder="0"></iframe>
   </body>
 </html>
