--- a/inyro/main3.html
+++ b/inyro/main3.html
@@ -21,8 +21,8 @@
       <li> <a id="li1" onclick="change1()">활동소개</a></li>
       <li> <a>|</a></li>
   	  <li> <a id="li2" onclick="change2()">게시판</a></li>
-      <li> <a>|</a></li>
-  	  <li> <a id="li3" onclick="change3()">갤러리</a></li>
+      <!-- <li> <a>|</a></li>
+  	  <li> <a id="li3" onclick="change3()">갤러리</a></li> -->
    </ul>
    <div id="menu-line"></div>
   <script>
@@ -32,9 +32,9 @@
     function change2() {
       document.getElementById("frame").src = "main3_2.html";
     }
-    function change3() {
-      document.getElementById("frame").src = "main3_3.html";
-    }
+    // function change3() {
+    //   document.getElementById("frame").src = "main3_3.html";
+    // }
 
   </script>
 </div>
