--- a/inyro/main3_3.html
+++ b/inyro/main3_3.html
@@ -22,7 +22,7 @@
       <img id="img" width="430px" height="430px" align='top' src="out1.PNG" />
     </div>
   </div>
-  <input type='button' id='more' style="font-size:15px;float:right;" value='더보기' onclick="parent.parent.location.href='gallery.html'"/>
+  <input type='button' id='more' style="font-size:15px;float:right;" value='더보기' onclick="parent.parent.location.href='yejin17.html'"/>
 </div>
     <!-- <div id="menuX" align='center'>
   <ul id="menu-list">
