--- a/inyro/main3_2.html
+++ b/inyro/main3_2.html
@@ -18,11 +18,13 @@
     	  <li> <a id="li2" onclick="change2()">과제 관련</a></li>
         <li> <a>|</a></li>
     	  <li> <a id="li3" onclick="change3()">QnA</a></li>
+        <li> <a>|</a></li>
+    	  <li> <a id="li4" onclick="change4()">갤러리</a></li>
      </ul>
      <div id="menu-line"  align='center'></div>
      <div class="container" align='center'>
       <!-- <img id="img" width="430px" height="430px" src="sangmyung.jpg" /> -->
-      <iframe style="pointer-events:none" id="frame" src="yejin14.html" width="650px" height="430px" frameborder="0"></iframe>
+      <iframe id="frame" src="yejinframe1.html" width="650px" height="430px" frameborder="0"></iframe>
 
     </div>
     </div>
@@ -44,13 +46,16 @@
   <!-- <input type='button' id='more' style="font-size:15px;" value='게시판 더보기'/> -->
   <script>
     function change1() {
-      document.getElementById("frame").src = "yejin14.html";
+      document.getElementById("frame").src = "yejinframe1.html";
     }
     function change2() {
-      document.getElementById("frame").src = "yejin15.html";
+      document.getElementById("frame").src = "yejinframe2.html";
     }
     function change3() {
-      document.getElementById("frame").src = "yejin16.html";
+      document.getElementById("frame").src = "yejinframe3.html";
+    }
+    function change4() {
+      document.getElementById("frame").src = "yejinframe4.html";
     }
   </script>
 </div>
