--- a/inyro/yejin12.html
+++ b/inyro/yejin12.html
@@ -22,14 +22,13 @@ document.addEventListener("DOMContentLoaded", function(event) {
     <span onclick="location.href='myongyeon7.html'">프로필</span>
   </nav>
 </header>
-
-<br> <br> <br> <br>
+<br> <br> <br>
 <!-- Tab links -->
 <div class="tab">
-  <button id="mybutton" class="tablinks" onclick="openCity(event, 'introduction'); A();" >자유</button>
-  <button class="tablinks" onclick="openCity(event, 'introduction'); B();">과제</button>
-  <button class="tablinks" onclick="openCity(event, 'introduction'); C();">Q&A</button>
-  <button class="tablinks" onclick="openCity(event, 'introduction'); D();">갤러리</button>
+  <button id="mybutton" class="tablinks" onclick="openCity(event, 'introduction'); A();" style="text-align:center; font-weight:bold; font-size:20px;">자유</button>
+  <button class="tablinks" onclick="openCity(event, 'introduction'); B();" style="text-align:center; font-weight:bold; font-size:20px;">과제</button>
+  <button class="tablinks" onclick="openCity(event, 'introduction'); C();" style="text-align:center; font-weight:bold; font-size:20px;">Q&A</button>
+  <button class="tablinks" onclick="openCity(event, 'introduction'); D();" style="text-align:center; font-weight:bold; font-size:20px;">갤러리</button>
 </div>
 
 
