--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -2,23 +2,19 @@
 <html>
   <head>
 <meta charset="utf-8">
-<style>
-  @import url(inyrobar.css);
-</style>
-  </head>
-  <body>
 
+  </head>
+  <body align="center">
+<h2>글 작성하기</h2><br>
 <form align='middle'>
   <pre>
-      <legend>글 작성하기</legend>
-      이름 : <input type="text" placeholder="이름을 입력하세요."> <br>
-      종류 : <select name="option">
+      <select name="option">
         <option value="1" selected>자유</option>
         <option value="2">과제</option>
         <option value="3">QNA</option>
         <option value="4">갤러리</option>
       </select> <br>
-      <textarea cols="70" rows="40" placeholder="내용을 입력하세요."></textarea> <br>
+      <textarea cols="70" rows="27" placeholder="내용을 입력하세요."></textarea> <br>
       <button onclick="location.href='yejin12.html'">등록하기</button>
   </pre>
   </body>
