--- a/inyro/yejinframe1.html
+++ b/inyro/yejinframe1.html
@@ -2,31 +2,40 @@
 <html>
   <head>
 <meta charset="utf-8">
+<style media="screen">
+  table{
+    border-collapse:collapse;
+  }
+  td,th{
+    text-align:center;
+    padding:10px;
+    height:20px;
+    width:200px;
+  }
+  thead{
+    background:darkgray;
+  }
+  td{
+    border-bottom:1px solid gray
+  }
+</style>
   </head>
   <body>
-    <h3>-</h3>
-    <ol>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-    <li>NAME</li>
-
-    </ol>
+    <table>
+      <thead>
+        <tr><th>제목</th><th>작성자</th><th>날짜</th></tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>컴퓨터과학과 취업잘되나요?</td><td>박예진</td><td>2020.06.01</td>
+        </tr>
+        <tr>
+          <td>나랑 같이 놀 사람</td><td>김윤진</td><td>2020.05.02</td>
+        </tr>
+        <tr>
+          <td>이니로스터디모집해요!</td><td>황명연</td><td>2020.03.21</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
