--- a/inyro/yejinframe3.html
+++ b/inyro/yejinframe3.html
@@ -2,13 +2,49 @@
 <html>
   <head>
 <meta charset="utf-8">
+<style media="screen">
+  table{
+    border-collapse:collapse;
+  }
+  td,th{
+    text-align:center;
+    padding:10px;
+    height:20px;
+    width:200px;
+  }
+  thead{
+    background:darkgray;
+  }
+  td{
+    border-bottom:1px solid gray
+  }
+</style>
   </head>
   <body>
-    <h3>---</h3>
-    <ol>
-    <li>NAME</li>
-
-
-    </ol>
+    <table>
+      <thead>
+        <tr><th>제목</th><th>작성자</th><th>날짜</th></tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>MT갑자기못가게되었어요,,</td><td>김윤진</td><td>2020.06.11</td>
+        </tr>
+        <tr>
+          <td>탈퇴</td><td>임재홍</td><td>2020.06.05</td>
+        </tr>
+        <tr>
+          <td>신입생환영회질문</td><td>안지민</td><td>2020.05.11</td>
+        </tr>
+        <tr>
+          <td>회비내고싶어요근데,,</td><td>안선정</td><td>2020.04.28</td>
+        </tr>
+        <tr>
+          <td>저희동방</td><td>황명연</td><td>2020.04.12</td>
+        </tr>
+        <tr>
+          <td>회장님...</td><td>김예진</td><td>2020.03.04</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
