--- a/inyro/yejin15.html
+++ b/inyro/yejin15.html
@@ -3,10 +3,11 @@
   <head>
 <meta charset="utf-8">
   </head>
-  <body>
-    <button onclick="location.href='yejin13.html'">작성하기</button>
-    <iframe src="yejinframe2.html" width=100% height=400px frameborder="0"></iframe>
-    <form>
+  <body align="center">
+    <h2>과제 게시판</h2>
+    <button style="position:absolute;top:90px; left:380px;" onclick="location.href='yejin13.html'">작성하기</button>
+    <iframe style="position:absolute;top:120px; left:350px;" src="yejinframe2.html" width=50% height=400px frameborder="0"></iframe>
+    <form style="position:absolute;top:90px; left:650px;">
       <select name="select">
         <option value="1" selected>제목</option>
         <option value="2">작성자</option>
