--- a/inyro/yejin17.html
+++ b/inyro/yejin17.html
@@ -3,7 +3,8 @@
   <head>
 <meta charset="utf-8">
   </head>
-  <body>
+  <body align="center">
+    <h2>갤러리 게시판</h2>
     <button onclick="location.href='yejin13.html'">작성하기</button>
     <iframe src="yejinframe4.html" width=100% height=480px frameborder="0"></iframe>
   </body>
