--- a/inyro/main1.html
+++ b/inyro/main1.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <nav>
-      <h1 align="center" style="font-size:30px; font-weight: bold;">INYRO INTRODUCTION</h1>
+      <h1 align="center" style="font-size:40px; font-weight: bold;">INYRO INTRODUCTION</h1>
     </nav>
-<section style="margin-top:80px;">
-  <img src="main1_1.png" width="680px" height="500px" style="float:left;">
+<section style="margin-top:80px;" align="center">
+  <!-- <img src="main1_1.png" width="680px" height="500px" style="float:left;"> -->
 
-  <img src="main1_2.png" width="680px" height="500px" style="float:right;" >
+  <img src="main1_2.png" width="1000px" height="600px">
 </section>
   </body>
 </html>
