명연Main비율수정ㅇ

--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -28,7 +28,7 @@
     </nav>
       <br>
       <section align="center" style="margin-bottom:100px">
-          <img src="main1_1.png" width="1600px" height="820px">
+          <img src="main1_1.png" width="80%">
       </section>
 
 		<section id="introduction" class="section1" align="center" style="margin-bottom:100px">
@@ -46,7 +46,7 @@
 					<iframe id="main3" src="main3.html" width="1400" height="800" frameborder="0"></iframe>
 			</div>
 		</section>
-		<section id="executive" class="section4" style="margin-bottom:100px">
+		<section id="executive" class="section4" style="margin-bottom:50px">
 			<div align="center">
 					<iframe id="main4" src="main4.html" width="1400" height="800" frameborder="0"></iframe>
 			</div>
