윤진 수정했는데 안되는거 있음 빡쳐

--- a/inyro/main2.html
+++ b/inyro/main2.html
@@ -63,7 +63,7 @@ ul li a:after{
   </head>
   <body>
     <nav>
-      <h1 align='center' style="font-size: 30px; font-weight: bold">INYRO ACTIVITY</h1>
+      <h1 align='center' style="font-size: 40px; font-weight: bold">INYRO ACTIVITY</h1>
     </nav>
     <div id="menu">
   <ul id="menu-list" style="margin-bottom:50px">
@@ -76,9 +76,10 @@ ul li a:after{
   	  <li> <a id="li4" onclick="change4()">이니로그램</a></li>
    </ul>
    <div id="menu-line"></div>
-   <div class="container">
-    <img id="img" width="300px" height="530px" float='left' style="vertical-align:middle" src="myeyes.png" />
-    <input type='text' id='text' style="width:350px;height:450px;font-size:25px;" value='내눈 설명!'/>
+   <div class="container" float='left'>
+    <img id="img" width="300px" height="530px" src="myeyes.png" align='middle'/>
+    <!-- <input type='textarea' id='text' cols='2' rows='2' wrap='hard' style="width:350px;height:450px;font-size:25px;border:none;" value='주기적으로 화면이 깜빡이면서 눈 깜빡임을 유도하는 앱'/> -->
+    <p id="text" style="width:350px;height:450px;font-size:25px;">주기적으로 화면이 깜빡이면서 눈 깜빡임을 유도하는 앱</p>
 
   </div>
   <script>
