--- a/inyro/myongyeon7.html
+++ b/inyro/myongyeon7.html
@@ -6,15 +6,14 @@
   <style media="screen">
     @import url(inyrobar.css);
 
-    .container{
+    /* .container{
       position: relative;
       width:100%;
-    }
+    } */
     .formInfor{
-      position: absolute;
-      top: 50%;
-      left: 37%;
-      margin: auto;
+      align-items: center;
+      text-align: left;
+      width: 33%;
     }
   </style>
   <header>
@@ -27,7 +26,7 @@
   </header>
   </head>
   <body>
-        <div class="container">
+        <div class="container" align="center">
           <form name="memInfor" method="post">
               <div class="formInfor">
                 <br><br><br><br>
