--- a/inyro/myongyeon8_modify.html
+++ b/inyro/myongyeon8_modify.html
@@ -5,15 +5,14 @@
     <title>비밀번호 확인</title>
     <style media="screen">
       @import url(inyrobar.css);
-      .container{
+      /* .container{
         position: relative;
         width:100%;
-      }
+      } */
       .checkpwd{
-        position: absolute;
-        top: 50%;
-        left: 36.5%;
-        margin: auto;
+        align-items: center;
+        text-align: left;
+        width: 33%;
       }
     </style>
     <header>
@@ -26,7 +25,7 @@
     </header>
   </head>
   <body>
-    <div class="container">
+    <div class="container" align="center">
       <div class="checkpwd">
       <form action="myongyeon9.html">
         <br><br><br><br>
